Fixed code block width on mobile

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -65,8 +65,8 @@ html {
 
 body {
     @include font(primary);
-    font-weight: 300;
     color: $c-text;
+    font-weight: 300;
 }
 
 h1,
@@ -106,7 +106,9 @@ code {
     line-height: 1.3;
 
     pre > & {
+        max-width: 100%;
         line-height: 1.5;
+        overflow-y: scroll;
     }
 }
 
